libSieve 2.2.1
--------------

- Removed accidental dependency on Check.

libSieve 2.2.0
--------------

- Updated top-level README.

- Fixed address test not working.

- Fixed innocuous yet annoying GCC 4 warnings.

libSieve 2.1.13
---------------

- Fixed capabilities missingspaces.

- Fixed alloca.h in vasnprintf for FreeBSD.

libSieve 2.1.12
---------------

- Fixed namespace issue with vasnprintf.

libSieve 2.1.11
---------------

- Minor fixes to build with flex 2.5.33.

- Updated to Vacation draft 6.

- Updated to imap4flags.

- Dropped support for imapflags.

- Added callback for subaddress rather than
  using a hardcoded user+mailbox format.

- Added a callback for debug messages.

- Regex is always built in now.

- Fixed multiline "text: string ." blocks.

libSieve 2.1.10
--------------

- Fixed sieve2_listextensions.

- Fixed segfault when client returns null
  pointers from the getenvelope callback.

- Improved handling of extension require's.

- Fixed segfault when parsing zero length address.

libSieve 2.1.9
--------------

- Fixed subaddress, getenvelope and vacation.

- Added additional debugging messages.

- Added new and updated draft rfc's.

libSieve 2.1.8
--------------

- Created a testsuite of scripts and messages
  to exercise RFC and Draft comformance.

- Fixed a memory allocation issue that prevented
  the library from being used again after sieve2_free
  had been called.

libSieve 2.1.7
--------------

- Rewrote the API again. I finally like it!

- Settled on the LGPL for all of my new code.

- Replaced the RSA MD5 implementation with
  a public domain version.

- Documentation updated for the new API.

libSieve 2.1.6
--------------

- Added a set of error-retrieval functions.

libSieve 2.1.5
--------------
(formerly libsieve 2.2.0_pre3)

- CFLAGS now includes -Wall and compiles very
  cleanly. Messages from lex/yacc are benign.

- Namespace cleanups: internal global functions
  prefixed with "libsieve_" for consistency.
