@@ -1,0 +1,5 @@
+require ["fileinto"];
+
+if allof (address :contains ["From"] "Alexandru") {
+        fileinto "Junk Mail";
+	}
